Removing dead code.

It looks like this code is never exercised because MetricsMediator
-setAppGroupMetricsEnabled: is never called.

BUG=736738

Change-Id: I05a7962aad0026393ca563cc59015189331deba3